WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149320
REGRESSION(
r188871
): 50% regression in page load time of Wikipedia home page
https://bugs.webkit.org/show_bug.cgi?id=149320
Summary
REGRESSION(r188871): 50% regression in page load time of Wikipedia home page
Myles C. Maxfield
Reported
2015-09-17 17:19:35 PDT
50% regression in page load time of Wikipedia home page
Attachments
Patch
(1.98 KB, patch)
2015-09-17 17:23 PDT
,
Myles C. Maxfield
dbates
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2015-09-17 17:23:20 PDT
Created
attachment 261461
[details]
Patch
Daniel Bates
Comment 2
2015-09-17 17:26:13 PDT
Comment on
attachment 261461
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=261461&action=review
> Source/WebCore/platform/graphics/ios/FontCacheIOS.mm:104 > +#if __IPHONE_OS_VERSION_MIN_REQUIRED > 90000
This is inside an existing guard.
Daniel Bates
Comment 3
2015-09-17 17:26:53 PDT
Comment on
attachment 261461
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=261461&action=review
>> Source/WebCore/platform/graphics/ios/FontCacheIOS.mm:104 >> +#if __IPHONE_OS_VERSION_MIN_REQUIRED > 90000 > > This is inside an existing guard.
Disregard this remark.
Myles C. Maxfield
Comment 4
2015-09-17 17:45:34 PDT
<
rdar://problem/22559949
>
Myles C. Maxfield
Comment 5
2015-09-17 17:50:26 PDT
Committed
r189951
: <
http://trac.webkit.org/changeset/189951
>
Chris Dumez
Comment 6
2015-09-28 09:59:58 PDT
Looks like a ~3.7% progression on iOS PLT on the bots.
Myles C. Maxfield
Comment 7
2015-09-29 11:44:00 PDT
(In reply to
comment #6
)
> Looks like a ~3.7% progression on iOS PLT on the bots.
\o/
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug