REGRESSION(r188871): 50% regression in page load time of Wikipedia home page https://bugs.webkit.org/show_bug.cgi?id=149320

Reviewed by Daniel Bates.

This is due to <rdar://problem/22144016> about how language-specific
font fallback is an order of magnitude slower than regular non-language-
specific font-fallback. This performance problem has been fixed, but not
for iOS 9.

No new tests because there is no correctness change.

* platform/graphics/ios/FontCacheIOS.mm:
(WebCore::platformLookupFallbackFont):

Canonical link: https://commits.webkit.org/167395@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189951 268f45cc-cd09-0410-ab3c-d52691b4dbfc